@@ -1,6 +1,4 @@
 
-- threadpool recyling might be useful for dzsave?
-
 
 - check and fix up docs
 
